some final touches

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+/*
+some of the css is hard coded because i used absolute positioning, i'll fix later
+*/
+
 div{
 	display: block;
 }
@@ -11,10 +15,6 @@ div{
 	background: #fafafa;
 	z-index: 10;
 }
-
-
-
-
 
 .title {
 	position: absolute;
