--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,5 @@
-/*
-some of the css is hard coded because i used absolute positioning, i'll fix later
-*/
+
+
 
 div{
 	display: block;
@@ -17,6 +16,7 @@ div{
 	text-align: center;
 }
 
+
 .title {
 	font-weight: 2500%;
 	color: black;
@@ -29,7 +29,7 @@ div{
 }
 
 
-#box1 { 
+#chonk { 
 	position: absolute; 
 	top: 13%;
 	right: 0;
@@ -40,15 +40,14 @@ div{
 	display: inline-block;
 }
 
-.design {
+.illustration {
 	width: 60%;
 	height: auto;
 	text-align: center;
-	margin-top: 5%;
 
 }
 
-#box2 { 
+#about { 
 	position: absolute; 
 	height: 105%;
 	top: 88%;
@@ -78,7 +77,7 @@ div{
 
 }
 
-#box3 { 
+#my_projects { 
 	position: absolute; 
 	height: 300%;
 	top: 193%;
@@ -100,8 +99,17 @@ div{
 	font-size: 85%;
 	letter-spacing: 1px;
 	padding: 20px;
-
 }
+.project1_text {
+	position: absolute;
+	left: 52%;
+	width: 42%;
+	top: 5%;
+	color: #cdcdcd;
+	font-family: "Avenir Next", "Avenir", sans-serif;
+	font-size: 120%;
+}
+
 #project_2 {
 	position: absolute;
 	top: 25%;
@@ -114,6 +122,16 @@ div{
 	font-size: 85%;
 	letter-spacing: 1px;
 	padding: 20px;
+}
+.project2_text {
+	position: absolute;
+	right: 55%;
+	width: 42%;
+	top: 5%;
+	color: #cdcdcd;
+	font-family: "Avenir Next", "Avenir", sans-serif;
+	font-size: 120%;
+	text-align: left;
 }
 
 #project_3 {
@@ -144,6 +162,7 @@ div{
 	padding: 20px;
 }
 
+/*for projects boxes */
 #mouse_over {
 	opacity: 0.7;
   }
@@ -153,3 +172,150 @@ opacity: 1;
 }
 
 
+/*hamburger drop down menu*/
+
+ body
+ {
+   margin: 0;
+   padding: 0;
+   color: #cdcdcd;
+   font-family: "Avenir Next", "Avenir", sans-serif;
+ }
+ 
+ #menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 10px;
+   left: 50px;
+   z-index: 1;
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ #menuToggle a:hover
+ {
+   color: tomato;
+ }
+ 
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0; /* hides this */
+   z-index: 2; /* and places it over the hamburger */
+   
+   -webkit-touch-callout: none;
+ }
+ 
+
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+			   background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+			   opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ /* 
+  * transforms all the slices of hamburger
+  * into a crossmark.
+  */
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ /*
+  * hides the middle one.
+  */
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ /*
+  * the last one should go the other direction
+  */
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ /*
+  * absolute positioned
+  * at the top left of the screen
+  */
+ #menu
+ {
+   position: absolute;
+   width: 200px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   /* to stop flickering of text in safari */
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 0 0;
+   font-size: 22px;
+ }
+ 
+ /*
+  * slides it in from the left
+  */
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
